--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_input">Add Task</string>
     <string name="save">SAVE</string>
+    <string name="go">GO BACK</string>
     <string name="in">Enter information</string>
     <string-array name="prioritylist">
         <item>Urgent</item>
@@ -16,4 +17,5 @@
         <item>Family Affair</item>
         <item>Uncategorized</item>
     </string-array>
+    <string name="title_activity_show">Show</string>
 </resources>
